# autonomousML

./: README.md  pyproject.toml  requirements.txt
codex_mle_harness/: LIMITATIONS.md  READINESS.md  README.md  RUNBOOK.md  WORK_DEMO_BRIEF.md  __init__.py  cli.py  demo_smoke.py  preflight.py  reporting.py  runner.py
codex_mle_harness/core/: __init__.py  attempt_summary.py  experiment_store.py  failures.py  implementation_worker.py  models.py  scheduler.py  work_order.py
codex_mle_harness/evaluation/: __init__.py  evaluator.py
codex_mle_harness/examples/insults_mlebench/: description.md  evaluator.py  task.yaml
codex_mle_harness/examples/iris_classification/: description.md  evaluator.py  task.yaml
codex_mle_harness/examples/iris_classification/data/: test.csv
codex_mle_harness/examples/toy_threshold/: description.md  evaluator.py  task.yaml
codex_mle_harness/examples/toy_threshold/data/: test.csv  train.csv
codex_mle_harness/execution/: __init__.py  docker_runner.py
codex_mle_harness/planning/: __init__.py  planner.py  validation.py
codex_mle_harness/templates/: README.md  description.md  evaluator.py  task.yaml
codex_mle_harness/tests/: __init__.py  test_live_e2e.py  test_manifest_store_git.py  test_planner_resume_reporting.py  test_preflight_readiness.py  test_scheduler_evaluator_runner.py
codex_mle_harness/utils/: __init__.py  git_utils.py  paths.py  task_files.py
codex_mle_harness/workers/: __init__.py  codex_worker.py
