[project]
name = "blind-tester"
version = "0.1.0"
description = "A bounded autonomous ML evaluation loop built as a fork of EvoMaster ML-Master 2.0 assets"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic",
    "PyYAML",
    "openai",
    "python-dotenv",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["codex_mle_harness"]

[tool.pytest.ini_options]
markers = [
    "docker: tests that require a local Docker daemon",
    "live: tests that require live Codex/provider credentials",
]
